--- a/app/src/main/res/layout/add_profile.xml
+++ b/app/src/main/res/layout/add_profile.xml
@@ -124,7 +124,7 @@
         app:layout_constraintStart_toStartOf="@id/userProfileImage"
         app:layout_constraintTop_toTopOf="@id/userProfileImage" />
 
-    <androidx.core.widget.ContentLoadingProgressBar
+    <ProgressBar
         android:id="@+id/nextProgress"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
