--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,11 +29,17 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="DialogStyle" parent="Theme.Design.Light.BottomSheetDialog">
+    <style name="DialogStyle" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
         <item name="android:windowIsFloating">false</item>
+        <!--        <item name="background">@null</item>-->
         <item name="android:windowSoftInputMode">adjustResize</item>
-<!--        <item name="background">@drawable/updated_sheet_corner_drawable</item>-->
+        <item name="cornerSizeTopRight">14dp</item>
+        <item name="cornerSizeTopLeft">14dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
+        <item name="colorAccent">@color/lightBlue</item>
     </style>
+
     <!--    <style name="AnimationTheme" parent="AppTheme">-->
     <!--        <item name="android:windowSharedElementEnterTransition">-->
     <!--            @transition/shared_transition-->
