--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -98,6 +98,7 @@
         app:backgroundTint="@color/lightBlack"
         app:elevation="16dp"
         app:fabSize="mini"
+        android:contentDescription="@null"
         app:layout_constraintBottom_toBottomOf="@id/floatingActionButtonBottomBarrier"
         app:layout_constraintEnd_toStartOf="@id/floatingActionButtonSideBarrier"
         app:srcCompat="@drawable/add_photo"
@@ -147,24 +148,26 @@
         app:layout_constraintEnd_toEndOf="@id/endGuideline"
         app:layout_constraintStart_toStartOf="@id/usernameHeader"
         app:layout_constraintTop_toBottomOf="@id/usernameHeader" />
+
     <EditText
         android:id="@+id/updatedUserProfileName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:visibility="gone"
-        android:inputType="text"
         android:background="@android:color/transparent"
+        android:cursorVisible="true"
         android:fontFamily="@font/regular"
+        android:importantForAutofill="no"
+        android:inputType="text"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/lightBlack"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@id/endGuideline"
         app:layout_constraintStart_toStartOf="@id/usernameHeader"
         app:layout_constraintTop_toBottomOf="@id/usernameHeader"
-        tools:ignore="LabelFor"
-        android:cursorVisible="true"
-        android:importantForAutofill="no" />
+        tools:ignore="LabelFor" />
+
     <View
         android:id="@+id/separator"
         android:layout_width="0dp"
@@ -209,5 +212,22 @@
         app:layout_constraintEnd_toEndOf="@id/endGuideline"
         app:layout_constraintStart_toStartOf="@id/emailHeader"
         app:layout_constraintTop_toBottomOf="@id/emailHeader" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnLogout"
+        style="@style/MaterialButtonTheme"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/regular"
+        android:padding="12dp"
+        android:text="@string/logout"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        app:backgroundTint="@color/lightBlue"
+        app:layout_constraintEnd_toEndOf="@id/endGuideline"
+        app:layout_constraintStart_toStartOf="@id/startGuideline"
+        app:layout_constraintTop_toBottomOf="@id/fullEmailAddress" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
