--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,16 +33,14 @@
         app:layout_constraintStart_toStartOf="@id/startGuideline"
         app:layout_constraintTop_toTopOf="@id/topGuideline">
 
-        <EditText
+        <TextView
             android:id="@+id/searchNote"
             style="@style/EditTextTheme"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
-            android:autofillHints="@null"
-            android:cursorVisible="false"
-            android:hint="@string/search_note"
-            android:inputType="text"
+            android:text="@string/search_note"
+            android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/barrier"
@@ -65,7 +63,6 @@
             android:fontFamily="@font/regular"
             android:gravity="center"
             android:scaleType="centerCrop"
-            android:src="@drawable/default_profile_user"
             android:textAllCaps="true"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@android:color/white"
@@ -79,7 +76,6 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginStart="8dp"
-            android:src="@mipmap/ic_launcher"
             android:visibility="invisible"
             app:civ_border_color="@android:color/white"
             app:civ_border_width="1dp"
@@ -133,6 +129,7 @@
             app:fabSize="normal"
             app:layout_anchor="@id/bottomAppBar"
             app:srcCompat="@drawable/add_note"
-            app:tint="@null" />
+            app:tint="@null"
+            android:contentDescription="@string/add_note" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
