--- a/app/src/main/res/menu/appbar_menu.xml
+++ b/app/src/main/res/menu/appbar_menu.xml
@@ -2,8 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/search"
+        android:icon="@drawable/search"
+        android:title=""
+        app:actionLayout="@layout/search_view"
+        app:showAsAction="always|collapseActionView" />
+    <item
         android:id="@+id/profileMenu"
         android:title=""
-        app:showAsAction="always"
-        app:actionLayout="@layout/toolbar_layout"/>
+        app:actionLayout="@layout/toolbar_layout"
+        app:showAsAction="ifRoom" />
 </menu>
